--- a/style.css
+++ b/style.css
@@ -19,6 +19,19 @@ div#qumessage {
     margin: 35px 0px;
 }
 
+button.cbutton {
+    background: #e5e5e5;
+    color: #5f5f5f;
+    border: none;
+    border-radius: 3px;
+    vertical-align: middle;
+    margin-left: 19px;
+}
+
+button.cbutton:hover {
+    color: #000;
+}
+
 div#quform {
     min-height: 200px;
 }
@@ -66,3 +79,23 @@ div#footer {
     font-size: 12px;
     margin-top: 15px;
 }
+
+svg polygon.crtgrid {
+    fill:none;
+    stroke:#444;
+    stroke-width:1
+}
+
+svg polygon.crtscores {
+    fill:#c4d7ff;
+    stroke:#444;
+    stroke-width:1
+}
+
+svg text.crtlabels {
+    text-anchor: middle;
+    font-size: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    fill: #444;
+}
+
